[Kerry] refactor project folder structure & update gulpfile

--- a/app/styles/mobile/default/mobile-default.scss
+++ b/app/styles/mobile/default/mobile-default.scss
@@ -1,7 +1,7 @@
-@import "../bower_components/swiper/src/idangerous.swiper.css";
-@import "../bower_components/animation-css/animate.css";
+@import "../../../bower_components/swiper/src/idangerous.swiper.css";
+@import "../../../bower_components/animation-css/animate.css";
 
-@import "./mobile/common.scss";
+@import "./modules/common.scss";
 
 .animated {
   -webkit-animation-duration: 0.8s;
