--- a/app/desktop/styles/modules/_common.scss
+++ b/app/desktop/styles/modules/_common.scss
@@ -1,7 +1,79 @@
-.test {
-	
-	width : 200px;
-	height: 200px;
-	border: 1px #000 solid;
-	display: none;
+html,body{
+	height: 100%;
+}
+ul,li{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.wrapper{
+
+	height: 100%;
+
+	& > div {
+		padding-bottom: 200000px;
+		margin-bottom: -200000px;
+		overflow: hidden;
+	}
+
+	header{
+		height: 80px;
+		border-bottom: 1px #000 solid;
+	}
+
+	.content {		
+		
+		display: block;
+		position: relative;
+		padding-bottom: 200000px;
+		margin-bottom: -200000px;
+
+		#nav {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 120px;
+			height: 100%;
+			padding: 10px;
+			ul {
+				li{
+					border: 1px #ccc solid;
+					margin-top: 10px;
+				}
+			}
+		}
+
+		#dashboard {
+			display: block;
+			margin-left: 120px;
+			border-left: 1px #000 solid;
+			padding-bottom: 200000px;
+			margin-bottom: -200000px;			
+			padding-top: 20px;	
+			.mobile-wrapper {
+				width: 300px;
+				margin: 0 auto;
+				height: 400px;
+				border: 1px #ccc solid;
+				position: relative;
+
+				.title-input{		
+					width: 80%;	
+					display: block;		
+					margin: 20px auto;
+				}
+				.description-input{
+					position: absolute;
+					width: 61.8%;
+					bottom: 40px;
+					right: 20px;
+				}
+
+			}
+
+		}
+
+	}
+
 }
